maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: expected class or object definition
def keepHandOnSideWall() {
^Escaper:32: error: expected class or object definition
def avance1() {
^Escaper:40: error: expected class or object definition
def avN() {
^Escaper:51: error: Unmatched closing brace '}' ignored here
}
^